--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "facebook/webdriver": "~1.0",
         "nesbot/carbon": "~1.20",
         "illuminate/support": "~5.3",
-        "symfony/process": "~3.2"
+        "symfony/process": "3.1.*",
+        "symfony/console": "3.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
